manage-group-members/force-app/main/default/objects/Flow_Error_Log__c/Flow_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Flow Error Log</label>
    <nameField>
        <displayFormat>Log - {0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flow Error logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>