manage-group-members/force-app/main/default/objects/Flow_Error_Log__c/fields/Case_related_to__c.field-meta.xml
<CustomField>
    <fullName>Case_related_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case related to</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Flow Error logs</relationshipLabel>
    <relationshipName>Flow_Error_logs</relationshipName>
    <type>Lookup</type>
</CustomField>