manage-group-members/force-app/main/default/objects/Flow_Error_Log__c/fields/Case_Values__c.field-meta.xml
<CustomField>
    <fullName>Case_Values__c</fullName>
    <label>Case Values</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>