manage-group-members/force-app/main/default/objects/Flow_Error_Log__c/fields/Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Name__c</fullName>
    <label>Flow Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>